--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li>
             <a
               class="tab-items"
-              href="files\AmirulRahim-CV-20.07.2022.pdf"
+              href="files\AmirulRahim-CV.pdf"
               target="_blank"
               >Resume</a
             >
@@ -260,7 +260,7 @@
             <tr>
               <td>
                 <a
-                  href="files\AmirulRahim-Degree-Transcript-2020.pdf"
+                  href="files\AmirulRahim-Degree-Transcript-2022.pdf"
                   class="cta"
                   target="_blank"
                   >View transcript ></a
