--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h1 class="section-header">About him</h1>
         <img class="profile-img" src="images/profile.png" alt="profile-img" />
         <h2>
-          Amirul is a driven and goal-oriented software engineering student who
+          Amirul Rahim is a driven and goal-oriented software engineering student who
           is not afraid to step out of his comfort zone for the pursuit of new
           knowledge and skill sets. With strengths in programming, problem
           solving, and critical thinking, he is a student of Multimedia
@@ -299,9 +299,11 @@
         </div>
       </div>
     </div>
-
-    <div class="bottom-container"></div>
-
-    <!-- + ph no + location + linkedin -->
   </body>
+  <footer>
+    <div class="bottom-container">
+      <p>Designed and Developed by Amirul Rahim | 2022 &#xa9;</p>
+      <p></p>
+    </div>
+  </footer>
 </html>
