--- a/index.html
+++ b/index.html
@@ -31,17 +31,7 @@
       <nav class="tab">
         <ul>
           <li>
-            <a class="tab-items" href="mailto:amirulrrhm@gmail.com"
-              >Get in Touch</a
-            >
-          </li>
-          <li>
-            <a
-              class="tab-items"
-              href="files\AmirulRahim-CV.pdf"
-              target="_blank"
-              >Resume</a
-            >
+            <a class="amirul">Amirul Rahim</a>
           </li>
           <li class="dropdown">
             <a class="tab-items">Explore</a>
@@ -56,7 +46,14 @@
             </div>
           </li>
           <li>
-            <a class="home">Amirul Rahim</a>
+            <a class="tab-items" href="files\AmirulRahim-CV.pdf" target="_blank"
+              >Resume</a
+            >
+          </li>
+          <li>
+            <a class="tab-items" href="mailto:amirulrrhm@gmail.com"
+              >Get in Touch</a
+            >
           </li>
         </ul>
       </nav>
@@ -90,11 +87,12 @@
         <h1 class="section-header">About him</h1>
         <img class="profile-img" src="images/profile.png" alt="profile-img" />
         <h2>
-          Amirul Rahim is a driven and goal-oriented software engineering student who
-          is not afraid to step out of his comfort zone for the pursuit of new
-          knowledge and skill sets. With strengths in programming, problem
-          solving, and critical thinking, he is a student of Multimedia
-          University, Cyberjaya. He is currently interning at Deloitte Malaysia.
+          Amirul Rahim is a driven and goal-oriented software engineering
+          student who is not afraid to step out of his comfort zone for the
+          pursuit of new knowledge and skill sets. With strengths in
+          programming, problem solving, and critical thinking, he is a student
+          of Multimedia University, Cyberjaya. He is currently interning at
+          Deloitte Malaysia.
         </h2>
         <h2>
           <br />
@@ -300,6 +298,7 @@
       </div>
     </div>
   </body>
+
   <footer>
     <div class="bottom-container">
       <p>Designed and Developed by Amirul Rahim | 2022 &#xa9;</p>
