--- a/index.html
+++ b/index.html
@@ -87,17 +87,16 @@
         <h1 class="section-header">About him</h1>
         <img class="profile-img" src="images/profile.png" alt="profile-img" />
         <h2>
-          Amirul Rahim is a driven and goal-oriented software engineering
-          student who is not afraid to step out of his comfort zone for the
-          pursuit of new knowledge and skill sets. With strengths in
-          programming, problem solving, and critical thinking, he is a student
-          of Multimedia University, Cyberjaya. He is currently interning at
-          Deloitte Malaysia.
+          Amirul Rahim is a software engineering graduate from Multimedia
+          University, Cyberjaya. He is driven and goal-oriented individual who
+          is not afraid to step out of his comfort zone for the pursuit of new
+          knowledge and skill sets. His strengths lie in programming, problem
+          solving, and critical thinking.
         </h2>
         <h2>
           <br />
           If you are looking for a diligent and perseverant individual to join
-          your organisation, then you have come to the right place.
+          your organisation, then you have found the right person.
         </h2>
         <br />
         <a class="next-page" onclick="scroll_to_div('skills')">Skills ></a>
