--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <!-- lity lightbox-->
+    <link href="lity-2.4.1/dist/lity.css" rel="stylesheet" />
+    <script src="lity-2.4.1/vendor/jquery.js"></script>
+    <script src="lity-2.4.1/dist/lity.js"></script>
   </head>
 
   <body>
@@ -150,7 +154,14 @@
                 membership registration and payments.
               </li>
               <br />
-              <li><a href="/cv/gymwallet.html" class="cta">More info ></a></li>
+              <li>
+                <a
+                  class="cta"
+                  href="https://www.youtube.com/watch?v=IT6rqQuV9as"
+                  data-lity
+                  >View demo ></a
+                >
+              </li>
             </ul>
           </div>
 
@@ -174,7 +185,14 @@
                 account and logging in.
               </li>
               <br />
-              <li><a href="/cv/therapeia.html" class="cta">More info ></a></li>
+              <li>
+                <a
+                  class="cta"
+                  href="https://www.youtube.com/watch?v=p-v0Md-sCHY"
+                  data-lity
+                  >View demo ></a
+                >
+              </li>
             </ul>
           </div>
         </div>
